<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/home_fragment_title"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/baseline_star_black_18dp"
            android:title="@string/favorite_fragment_title"/>
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/baseline_face_black_18dp"
            android:title="@string/user_profile_fragment_title"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_black_18dp"
            android:title="@string/settings_fragment_title"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_black_18dp"
            android:title="@string/about_fragment_title"/>
        <item
            android:id="@+id/nav_private_policy"
            android:title="@string/private_policy_title"/>
        <item
            android:id="@+id/nav_empty"
            android:title="empty"
            android:visible="false"/>
    </group>
</menu>
