<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/baseline_edit_white_18dp"
            android:title="@string/edit_profile_title"/>
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/baseline_inbox_white_18dp"
            android:title="@string/inbox_title"/>
        <item
            android:id="@+id/nav_disconnect"
            android:icon="@drawable/baseline_exit_to_app_white_18dp"
            android:title="@string/disconnect_title"/>
        <item
            android:id="@+id/nav_manage_accounts"
            android:icon="@drawable/baseline_settings_white_18dp"
            android:title="@string/manage_accounts_title"/>
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/baseline_delete_white_18dp"
            android:title="@string/delete_account_title"/>
    </group>
</menu>