<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="3sp"
        android:layout_gravity="center|start"
        android:contentDescription="@string/nav_header_desc"
        android:background="@drawable/circle_img_profile_bg_black"
        android:src="@drawable/sharp_account_circle_black_18dp"
       />
<!-- -->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="bottom|start"
       android:layout_marginTop="5dp"
      >
       <TextView
           android:id="@+id/nick_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:text="@string/nav_header_title"
           android:textColor="@android:color/black"
           />

       <TextView
           android:id="@+id/email"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@android:color/black"
           android:text="@string/nav_header_subtitle"/>
   </LinearLayout>

    <ImageView
        android:id="@+id/arrow_drop_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/baseline_arrow_drop_down_black_18dp"
        android:visibility="invisible"
        />
</FrameLayout>
</layout>